<?xml version="1.0"?>
<package format="2">
  <name>drive_crusher_pkg</name>
  <version>0.0.0</version>
  <description>Drive Crusher Package</description>

  <maintainer email="demola.oris@gmail.com">Ademola</maintainer>

  <license>TO DO</license>

  <author>Ademola</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>moveit</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
